--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
     "method-override": "^3.0.0",
     "mongodb": "^6.14.2",
     "mongosh": "^2.4.2",
